# kuku-shell

./: CLAUDE.md  Cargo.toml  README.md  mcp.example.toml
.github/workflows/: ci.yml
src/: ai_config.rs  api.rs  ask.rs  assist.rs  config_cmd.rs  doctor.rs  init.rs  main.rs  mcp.rs  menu.rs  profile.rs  reset.rs
